compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__bit_arrays__case_match_float_sized_little_endian.snap
---
source: compiler-core/src/javascript/tests/bit_arrays.rs
expression: "\npub fn go(x) {\n  case x {\n    <<a:float-32-little, b:int>> -> #(a, b)\n    _ -> #(1.1, 2)\n  }\n}\n"
---
----- SOURCE CODE

pub fn go(x) {
  case x {
    <<a:float-32-little, b:int>> -> #(a, b)
    _ -> #(1.1, 2)
  }
}


----- COMPILED JAVASCRIPT
import { bitArraySliceToFloat } from "../gleam.mjs";

export function go(x) {
  if (
    x.bitSize >= 32 &&
    globalThis.Number.isFinite(bitArraySliceToFloat(x, 0, 32, false)) &&
    x.bitSize === 40
  ) {
    let a = bitArraySliceToFloat(x, 0, 32, false);
    let b = x.byteAt(4);
    return [a, b];
  } else {
    return [1.1, 2];
  }
}
